need gallery, not working, only new photos((

--- a/app/about.html
+++ b/app/about.html
@@ -209,9 +209,9 @@
 							<span class="img-convert img-cover">
 								<div class="item-outer">
 									<div class="item">
-										<a class="image fancybox" href="img/technology-people-big.jpg">
+										<a class="image fancybox" href="img/technology-people-big.jpg?v=1.1">
 											<div class="item-label"></div>
-											<span class="img-convert img-cover"><img src="img/technology-people-small.jpg" alt="15 лет на строительном рынке"></span>
+											<span class="img-convert img-cover"><img src="img/technology-people-small.jpg?v=1.1" alt="15 лет на строительном рынке"></span>
 										</a>
 									</div>
 								</div>
@@ -222,9 +222,9 @@
 							<span class="img-convert img-cover">
 								<div class="item-outer">
 									<div class="item">
-										<a class="image fancybox" href="img/technology-classic-big.jpg">
+										<a class="image fancybox" href="img/technology-classic-big.jpg?v=1.1">
 											<div class="item-label"></div>
-											<span class="img-convert img-cover"><img src="img/technology-classic-small.jpg" alt="15 лет на строительном рынке"></span>
+											<span class="img-convert img-cover"><img src="img/technology-classic-small.jpg?v=1.1" alt="15 лет на строительном рынке"></span>
 										</a>
 									</div>
 								</div>
@@ -683,7 +683,7 @@
 						<div class="item-outer">
 							<div class="item">
 								<a class="image fancybox" href="img/about-sliders/concrete/8.JPG" data-fancybox="gallery">
-									<div class="item-label"><div class="align-elem">Акция</div></div>
+									<div class="item-label"></div>
 									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/8.JPG" alt="gallery"></span>
 								</a>
 							</div>
@@ -691,9 +691,9 @@
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/about-sliders/concrete/9.JPG" data-fancybox="gallery">
-									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/9.JPG" alt="gallery"></span>
+								<a class="image fancybox" href="img/about-sliders/concrete/9.jpg?v=1.1" data-fancybox="gallery">
+									<div class="item-label"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/9.jpg?v=1.1" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
@@ -701,7 +701,7 @@
 						<div class="item-outer">
 							<div class="item">
 								<a class="image fancybox" href="img/about-sliders/concrete/10.JPG" data-fancybox="gallery">
-									<div class="item-label"><div class="align-elem">Акция</div></div>
+									<div class="item-label"></div>
 									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/10.JPG" alt="gallery"></span>
 								</a>
 							</div>
@@ -710,7 +710,7 @@
 						<div class="item-outer">
 							<div class="item">
 								<a class="image fancybox" href="img/about-sliders/concrete/11.jpg" data-fancybox="gallery">
-									<div class="item-label"><div class="align-elem">Акция</div></div>
+									<div class="item-label"></div>
 									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/11.jpg" alt="gallery"></span>
 								</a>
 							</div>
@@ -719,7 +719,7 @@
 						<div class="item-outer">
 							<div class="item">
 								<a class="image fancybox" href="img/about-sliders/concrete/12.jpg" data-fancybox="gallery">
-									<div class="item-label"><div class="align-elem">Акция</div></div>
+									<div class="item-label"></div>
 									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/12.jpg" alt="gallery"></span>
 								</a>
 							</div>
@@ -728,7 +728,7 @@
 						<div class="item-outer">
 							<div class="item">
 								<a class="image fancybox" href="img/about-sliders/metal/1.JPG" data-fancybox="gallery">
-									<div class="item-label"><div class="align-elem">Акция</div></div>
+									<div class="item-label"></div>
 									<span class="img-convert img-cover"><img src="img/about-sliders/metal/1.JPG" alt="gallery"></span>
 								</a>
 							</div>
@@ -737,7 +737,7 @@
 						<div class="item-outer">
 							<div class="item">
 								<a class="image fancybox" href="img/about-sliders/metal/2.JPG" data-fancybox="gallery">
-									<div class="item-label"><div class="align-elem">Акция</div></div>
+									<div class="item-label"></div>
 									<span class="img-convert img-cover"><img src="img/about-sliders/metal/2.JPG" alt="gallery"></span>
 								</a>
 							</div>
@@ -766,6 +766,15 @@
 								<a class="image fancybox" href="img/about-sliders/metal/5.jpg" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
 									<span class="img-convert img-cover"><img src="img/about-sliders/metal/5.jpg" alt="gallery"></span>
+								</a>
+							</div>
+						</div>
+
+						<div class="item-outer">
+							<div class="item">
+								<a class="image fancybox" href="img/about-sliders/metal/6.jpg?v=1.1" data-fancybox="gallery">
+									<div class="item-label"><div class="align-elem">Акция</div></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/metal/6.jpg?v=1.1" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
