--- a/app/index.html
+++ b/app/index.html
@@ -303,7 +303,7 @@
 
 										</div>
 									</div>
-								</div>[]
+								</div>
 
 								<div class="button-container">
 									<a class="open-form-button center-button" href="#take-2_4th_roof"><span>Заказать Одноэтажный дом с четырехскатной кровлей</span></a>
