works gallery in about page

--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -222,7 +222,7 @@
 					<h1 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Наши объекты</h1>
 
 					<div class="gallery-block">
-						<h2 class="h2">Дом двухэтажный 106,59м<sup><small>2</small></sup> в коттеджном поселке "Семейный"</h2>
+						<h2 class="h2">Дом двухэтажный 106,59м<sup><small>2</small></sup> с четырехскатной кровлей в коттеджном поселке "Семейный"</h2>
 						<div class="masonry">
 
 							<!-- <a class="item image fancybox" href="img/gallery/15_semeiniy_2/1.jpg?v=1.6" data-fancybox="15_semeiniy_2">
@@ -241,7 +241,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h2">Дом двухэтажный 120,54м<sup><small>2</small></sup> с балконом в коттеджном поселке "Семейный"</h2>
+						<h2 class="h2">Дом двухэтажный 120,54м<sup><small>2</small></sup> с четырехскатной кровлей, с балконом в коттеджном поселке "Семейный"</h2>
 						<div class="masonry">
 
 							<!-- <a class="item image fancybox" href="img/gallery/12_semeiniy_1/1.jpg?v=1.6" data-fancybox="12_semeiniy_1">
@@ -260,7 +260,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h2">Дом двухэтажный 106,59м<sup><small>2</small></sup> с навесом и балконом в коттеджном поселке "Солнечная поляна"</h2>
+						<h2 class="h2">Дом двухэтажный 106,59м<sup><small>2</small></sup> с четырехскатной кровлей с навесом и балконом в коттеджном поселке "Солнечная поляна"</h2>
 						<div class="masonry">
 
 							<!-- <a class="item image fancybox" href="img/gallery/13_sunny_classic_2/1.jpg?v=1.6" data-fancybox="13_sunny_classic_2">
@@ -279,12 +279,12 @@
 					</div>
 
 					<div class="gallery-block">
-						 <h2 class="h2">Дом двухэтажный <!--111,91м<sup><small>2</small></sup>--> в коттеджном поселке "Солнечная поляна"</h2>
+						 <h2 class="h2">Дом двухэтажный "Народный" 90,04м<sup><small>2</small></sup> с односкатной кровлей в коттеджном поселке "Солнечная поляна"</h2>
 						<div class="masonry">
 
-							<!-- <a class="item image fancybox" href="img/gallery/14_sunny_people_1/1.jpg?v=1.6" data-fancybox="14_sunny_people_1">
+							<a class="item image fancybox" href="img/gallery/14_sunny_people_1/1.jpg?v=1.6" data-fancybox="14_sunny_people_1">
 								<img src="img/gallery/14_sunny_people_1/sm/1.jpg?v=1.6" alt="img">
-							</a> -->
+							</a>
 
 							<a class="item image fancybox" href="img/gallery/14_sunny_people_1/2.jpg?v=1.6" data-fancybox="14_sunny_people_1">
 								<img src="img/gallery/14_sunny_people_1/sm/2.jpg?v=1.6" alt="img">
@@ -298,7 +298,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h2">Дом двухэтажный 138,74м<sup><small>2</small></sup> на ул. Туристическая</h2>
+						<h2 class="h2">Дом двухэтажный 138,74м<sup><small>2</small></sup> с четырехскатной кровлей на ул. Туристическая</h2>
 						<div class="masonry">
 
 							<!-- <a class="item image fancybox" href="img/gallery/11_turisticheskaya_1/1.jpg?v=1.6" data-fancybox="11_turisticheskaya_1">
@@ -317,7 +317,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h2">Дом двухэтажный 171,27м<sup><small>2</small></sup> на ул. Вершинная</h2>
+						<h2 class="h2">Дом двухэтажный 171,27м<sup><small>2</small></sup> с четырехскатной кровлей на ул. Вершинная</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/10_vershinnaya_1/1.jpg?v=1.6" data-fancybox="10_vershinnaya_1">
@@ -344,7 +344,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h2">Дом двухэтажный 138,74м<sup><small>2</small></sup> на ул. Невская</h2>
+						<h2 class="h2">Дом двухэтажный 138,74м<sup><small>2</small></sup> с четырехскатной кровлей на ул. Невская</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/9_nevskaya_1/1.jpg?v=1.6" data-fancybox="9_nevskaya_1">
