add villages in menu

--- a/app/about.html
+++ b/app/about.html
@@ -13,14 +13,14 @@
 		content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=3.0">
+	<link rel="stylesheet" href="title.styles.css?v=3.3">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.1">
+	<link rel="stylesheet" href="css/main.min.css?v=3.3">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.1"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.3"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -104,8 +104,13 @@
 								</li>
 								<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a>
 								</li>
-								<li class="menu-item"><a href="https://семейный-дв.рф" target="blank" rel="nofollow"><span
-											class="menu-item-text">Коттеджные поселки</span></a></li>
+								<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные поселки</span></a>
+									<ul>
+										<li><a href="https://семейный-дв.рф" target="blank" rel="nofollow">Семейный</a></li>
+										<!-- <li><a href="https://экопаркюг.рф" target="blank" rel="nofollow">Экопарк Юг</a></li> -->
+										<li><a href="https://экопарксевер.рф" target="blank" rel="nofollow">Экопарк Север</a></li>
+									</ul>
+								</li>
 								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
 								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 							</ul>
@@ -387,90 +392,77 @@
 							<h2 class="align-elem">Цех по производству ЖБИ</h2>
 						</div>
 
-						<!-- <div class="image">
-							<span class="img-convert img-cover">
-								<div class="item-outer">
-									<div class="item">
-										<a class="image fancybox" href="img/about-sliders/concrete/7.JPG?v=1.1">
-											<div class="item-label"></div>
-											<span class="img-convert img-cover"><img src="img/about-sliders/concrete/7.JPG?v=1.1" alt="Цех по производству ЖБИ"></span>
-										</a>
-									</div>
-								</div>
-							</span>
-						</div> -->
-
 						<div class="slider">
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/1.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/1.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/1.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/1.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/2.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/2.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/2.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/2.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/3.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/3.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/3.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/3.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/4.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/4.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/4.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/4.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/5.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/5.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/5.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/5.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/6.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/6.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/6.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/6.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/7.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/7.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/7.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/7.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/8.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/8.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/8.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/8.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/9.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/9.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/9.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/9.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/10.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/10.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/10.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/10.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/11.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/11.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/11.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/11.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/concrete/12.jpg?v=1.0" data-fancybox="concrete">
-									<img class="img-responsive" src="img/about-sliders/concrete/sm/12.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/concrete/12.jpg?v=1.1" data-fancybox="concrete">
+									<img class="img-responsive" src="img/about-sliders/concrete/sm/12.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
@@ -494,38 +486,38 @@
 						<div class="slider">
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/metal/1.jpg?v=1.0" data-fancybox="metal">
-									<img class="img-responsive" src="img/about-sliders/metal/sm/1.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/metal/1.jpg?v=1.1" data-fancybox="metal">
+									<img class="img-responsive" src="img/about-sliders/metal/sm/1.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/metal/2.jpg?v=1.0" data-fancybox="metal">
-									<img class="img-responsive" src="img/about-sliders/metal/sm/2.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/metal/2.jpg?v=1.1" data-fancybox="metal">
+									<img class="img-responsive" src="img/about-sliders/metal/sm/2.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/metal/3.jpg?v=1.0" data-fancybox="metal">
-									<img class="img-responsive" src="img/about-sliders/metal/sm/3.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/metal/3.jpg?v=1.1" data-fancybox="metal">
+									<img class="img-responsive" src="img/about-sliders/metal/sm/3.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/metal/4.jpg?v=1.0" data-fancybox="metal">
-									<img class="img-responsive" src="img/about-sliders/metal/sm/4.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/metal/4.jpg?v=1.1" data-fancybox="metal">
+									<img class="img-responsive" src="img/about-sliders/metal/sm/4.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/metal/5.jpg?v=1.0" data-fancybox="metal">
-									<img class="img-responsive" src="img/about-sliders/metal/sm/5.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/metal/5.jpg?v=1.1" data-fancybox="metal">
+									<img class="img-responsive" src="img/about-sliders/metal/sm/5.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
 							<div class="slide">
-								<a class="image fancybox" href="img/about-sliders/metal/6.jpg?v=1.0" data-fancybox="metal">
-									<img class="img-responsive" src="img/about-sliders/metal/sm/6.jpg?v=1.0" alt="img">
+								<a class="image slides" href="img/about-sliders/metal/6.jpg?v=1.1" data-fancybox="metal">
+									<img class="img-responsive" src="img/about-sliders/metal/sm/6.jpg?v=1.1" alt="img">
 								</a>
 							</div>
 
