--- a/app/dealers.html
+++ b/app/dealers.html
@@ -10,20 +10,20 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=2.4">
+	<link rel="stylesheet" href="title.styles.css?v=3.3">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=2.5">
+	<link rel="stylesheet" href="css/main.min.css?v=3.3">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=2.7"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.3"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script type="text/javascript" src="title.js"></script>
-	<link rel="stylesheet" href="styles.css?v=4.2">
+	<link rel="stylesheet" href="styles.css?v=3.3">
 	
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -106,11 +106,18 @@
 									<li><a href="kontakty.html" ><span class="menu-item-text">Контакты</span></a></li>
 								</ul> -->
 							</li>
-							<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a></li>
-							<li class="menu-item"><a href="https://семейный-дв.рф" target="blank" rel="nofollow"><span class="menu-item-text">Коттеджные поселки</span></a></li>
+							<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a>
+							</li>
+							<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные поселки</span></a>
+								<ul>
+									<li><a href="https://семейный-дв.рф" target="blank" rel="nofollow">Семейный</a></li>
+									<!-- <li><a href="https://экопаркюг.рф" target="blank" rel="nofollow">Экопарк Юг</a></li> -->
+									<li><a href="https://экопарксевер.рф" target="blank" rel="nofollow">Экопарк Север</a></li>
+								</ul>
+							</li>
 							<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
 							<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
-						</ul> 
+						</ul>
 					</div>
 
 				</div>
