--- a/app/about.html
+++ b/app/about.html
@@ -104,10 +104,11 @@
 								</li>
 								<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a>
 								</li>
-								<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные поселки</span></a>
+								<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные
+											поселки</span></a>
 									<ul>
 										<li><a href="https://семейный-дв.рф" target="blank" rel="nofollow">Семейный</a></li>
-										<!-- <li><a href="https://экопаркюг.рф" target="blank" rel="nofollow">Экопарк Юг</a></li> -->
+										<li><a href="https://экопаркюг.рф" target="blank" rel="nofollow">Экопарк Юг</a></li>
 										<li><a href="https://экопарксевер.рф" target="blank" rel="nofollow">Экопарк Север</a></li>
 									</ul>
 								</li>
@@ -626,14 +627,12 @@
 									<div class="form-item-group group-text">
 										<div class="form-item form-text name">
 											<div class="form-item__body">
-												<input class="wm-input-default" placeholder="* Ваше имя: " name="Имя" type="text"
-													maxlength="100" required />
+												<input class="wm-input-default" placeholder="* Ваше имя: " name="Имя" type="text" maxlength="100" required />
 											</div>
 										</div>
 										<div class="form-item form-text phone">
 											<div class="form-item__body">
-												<input class="wm-input-default phone-number" placeholder="* Телефон: " name="Телефон"
-													type="text" maxlength="100" required />
+												<input class="wm-input-default phone-number" placeholder="* Телефон: " name="Телефон" type="text" maxlength="100" required />
 											</div>
 										</div>
 									</div>
@@ -641,8 +640,7 @@
 								<div class="form-tfoot">
 									<div class="form-item-group group-button">
 										<div class="form-submit">
-											<div class="form-item__body"><button class="wm-input-default" type="submit"><span
-														class="align-elem">Жду звонка</span></button></div>
+											<div class="form-item__body"><button class="wm-input-default" type="submit"><span class="align-elem">Жду звонка</span></button></div>
 										</div>
 									</div>
 								</div>
@@ -749,8 +747,9 @@
 
 
 
-		<!-- <div class="editorElement layer-type-block ui-droppable block-11">
-			<div class="blocklist blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget">
+		<div class="editorElement layer-type-block ui-droppable block-11">
+			<div
+				class="blocklist blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget">
 
 
 
@@ -763,36 +762,36 @@
 
 					<a href="#video-1" class="video-item open-form-button">
 						<div class="video-block"
-							style="background: url('img/video/1.jpg') center no-repeat; background-size: cover;"></div>
-						<p>Дом клиента в с.Тополево</p>
-						<span>Монтаж дома в с.Тополево</span>
+							style="background: url('img/video/1.png') center no-repeat; background-size: cover;"></div>
+						<!-- <p>Дом клиента в с.Тополево</p>
+						<span>Монтаж дома в с.Тополево</span> -->
 					</a>
 
 					<a href="#video-2" class="video-item open-form-button">
 						<div class="video-block"
-							style="background: url('img/video/2.jpg') center no-repeat; background-size: cover;"></div>
-						<p>Дом клиента на Красной речке</p>
-						<span>Монтаж дома в районе Красной речки</span>
+							style="background: url('img/video/2.png') center no-repeat; background-size: cover;"></div>
+						<!-- <p>Дом клиента на Красной речке</p>
+						<span>Монтаж дома в районе Красной речки</span> -->
 					</a>
 
 					<a href="#video-3" class="video-item open-form-button">
 						<div class="video-block"
-							style="background: url('img/video/3.jpg') center no-repeat; background-size: cover;"></div>
-						<p>Дом клиента в с.Виноградовка</p>
-						<span>Обзор дома для килента в с.Виноградовка</span>
+							style="background: url('img/video/3.png') center no-repeat; background-size: cover;"></div>
+						<!-- <p>Дом клиента в с.Виноградовка</p>
+						<span>Обзор дома для килента в с.Виноградовка</span> -->
 					</a>
 
 					<a href="#video-4" class="video-item open-form-button">
 						<div class="video-block"
-							style="background: url('img/video/4.jpg') center no-repeat; background-size: cover;"></div>
-						<p>Дом клиента по ул.Ханкайская</p>
-						<span>Монтаж дома для клиента по ул.Ханкайская</span>
+							style="background: url('img/video/4.png') center no-repeat; background-size: cover;"></div>
+						<!-- <p>Дом клиента по ул.Ханкайская</p>
+						<span>Монтаж дома для клиента по ул.Ханкайская</span> -->
 					</a>
 
 				</div>
 
 			</div>
-		</div> -->
+		</div>
 
 
 
@@ -1046,23 +1045,27 @@
 		</form>
 
 		<div id="video-1" class="open-video zoom-anim-dialog">
-			<iframe width="720" height="480" src="https://www.youtube.com/embed/dm1bEfG965U" frameborder="0"
-				allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="720" height="480" src="https://www.youtube.com/embed/jKtHIyM1pFk" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
 		</div>
 
 		<div id="video-2" class="open-video zoom-anim-dialog">
-			<iframe width="720" height="480" src="https://www.youtube.com/embed/zlgxR_GiscE" frameborder="0"
-				allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="720" height="480" src="https://www.youtube.com/embed/2ijUsPhk5OA" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
 		</div>
 
 		<div id="video-3" class="open-video zoom-anim-dialog">
-			<iframe width="720" height="480" src="https://www.youtube.com/embed/ZqHAAZcm-h0" frameborder="0"
-				allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="720" height="480" src="https://www.youtube.com/embed/lOWm3Tx7qkA" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
 		</div>
 
 		<div id="video-4" class="open-video zoom-anim-dialog">
-			<iframe width="720" height="480" src="https://www.youtube.com/embed/4iGi3JAEx7s" frameborder="0"
-				allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="720" height="480" src="https://www.youtube.com/embed/0-9sQj_8ywc" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
 		</div>
 
 	</div>
