--- a/app/dealers.html
+++ b/app/dealers.html
@@ -111,7 +111,7 @@
 							<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные поселки</span></a>
 								<ul>
 									<li><a href="https://семейный-дв.рф" target="blank" rel="nofollow">Семейный</a></li>
-									<!-- <li><a href="https://экопаркюг.рф" target="blank" rel="nofollow">Экопарк Юг</a></li> -->
+									<li><a href="https://экопаркюг.рф" target="blank" rel="nofollow">Экопарк Юг</a></li>
 									<li><a href="https://экопарксевер.рф" target="blank" rel="nofollow">Экопарк Север</a></li>
 								</ul>
 							</li>
