--- a/app/index.html
+++ b/app/index.html
@@ -11,20 +11,20 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=3.3">
+	<link rel="stylesheet" href="title.styles.css?v=3.4">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.3">
+	<link rel="stylesheet" href="css/main.min.css?v=3.4">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.3"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.4"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script type="text/javascript" src="title.js"></script>
-	<link rel="stylesheet" href="styles.css?v=3.3">
+	<link rel="stylesheet" href="styles.css?v=3.4">
 	
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -94,7 +94,7 @@
 								<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные поселки</span></a>
 									<ul>
 										<li><a href="https://семейный-дв.рф" target="blank" rel="nofollow">Семейный</a></li>
-										<!-- <li><a href="https://экопаркюг.рф" target="blank" rel="nofollow">Экопарк Юг</a></li> -->
+										<li><a href="https://экопаркюг.рф" target="blank" rel="nofollow">Экопарк Юг</a></li>
 										<li><a href="https://экопарксевер.рф" target="blank" rel="nofollow">Экопарк Север</a></li>
 									</ul>
 								</li>
@@ -542,10 +542,22 @@
 									</a>
 								</div>
 
-								<h2 class="next-h">Этапы строительства дома</h2>
+								<div class="video-blocks">
 
-								<div class="video">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/OfvZIRqvawY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="video-block">
+										<h2 class="next-h">Этапы строительства дома Народный</h2>
+										<div class="video">
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/6GSTyOiCGRM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										</div>
+									</div>
+	
+									<div class="video-block">
+										<h2 class="next-h">Этапы строительства дома Классика</h2>
+										<div class="video">
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/xCbEcFG1MH0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										</div>
+									</div>
+
 								</div>
 
 
