add new videos about

--- a/app/about.html
+++ b/app/about.html
@@ -788,6 +788,20 @@
 						<span>Монтаж дома для клиента по ул.Ханкайская</span> -->
 					</a>
 
+					<a href="#video-5" class="video-item open-form-button">
+						<div class="video-block"
+							style="background: url('img/video/5.png') center no-repeat; background-size: cover;"></div>
+						<!-- <p>Дом клиента по ул.Ханкайская</p>
+						<span>Монтаж дома для клиента по ул.Ханкайская</span> -->
+					</a>
+
+					<a href="#video-6" class="video-item open-form-button">
+						<div class="video-block"
+							style="background: url('img/video/6.png') center no-repeat; background-size: cover;"></div>
+						<!-- <p>Дом клиента по ул.Ханкайская</p>
+						<span>Монтаж дома для клиента по ул.Ханкайская</span> -->
+					</a>
+
 				</div>
 
 			</div>
@@ -1064,6 +1078,18 @@
 
 		<div id="video-4" class="open-video zoom-anim-dialog">
 			<iframe width="720" height="480" src="https://www.youtube.com/embed/0-9sQj_8ywc" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</div>
+
+		<div id="video-5" class="open-video zoom-anim-dialog">
+			<iframe width="720" height="480" src="https://www.youtube.com/embed/q_FNmLNlZmo" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</div>
+
+		<div id="video-6" class="open-video zoom-anim-dialog">
+			<iframe width="720" height="480" src="https://www.youtube.com/embed/dJ3R-Xdi_XY" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
 		</div>
