add new photos objects

--- a/app/index.html
+++ b/app/index.html
@@ -93,9 +93,9 @@
 								</li>
 								<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные поселки</span></a>
 									<ul>
-										<li><a href="https://семейный-дв.рф" target="blank" rel="nofollow">Семейный</a></li>
-										<li><a href="https://экопаркюг.рф" target="blank" rel="nofollow">Экопарк Юг</a></li>
-										<li><a href="https://экопарксевер.рф" target="blank" rel="nofollow">Экопарк Север</a></li>
+										<li><a href="https://семейный-дв.рф" target="_blank" rel="nofollow">Семейный</a></li>
+										<li><a href="https://экопаркюг.рф" target="_blank" rel="nofollow">Экопарк Юг</a></li>
+										<li><a href="https://экопарксевер.рф" target="_blank" rel="nofollow">Экопарк Север</a></li>
 									</ul>
 								</li>
 								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
@@ -972,6 +972,15 @@
 
 
 		<div id="take-consultation" class="text-popup-window zoom-anim-dialog">
+
+			<div>
+				<h3>Сенсация для молодых семей! (возраст до 36 лет)</h3>
+				<h3>Теперь вы можете построить свой дом в ипотеку 2% БЕЗ ЗАЛОГА!!!</h3>
+				<p>За период действия ДВ ипотеки огромное количество молодых семей обращались к нам за строительством дома, но банки требовали залог в виде недвижимости (квартиры), причем залог должен был быть выше суммы кредита.</p>
+				<p>Например, у нас дом с сетями и участком стоит всего 3,8 млн. руб., а залог требовался на сумму не менее 4,75 млн. руб! В 90% случаев такого залога у молодых семей не было, и они могли только мечтать о доме.</p>
+				<p>Но сегодня все изменилось! Общими усилиями мы добились того, что теперь для строительства дома <strong>залог не требуется!</strong></p>
+				<p>Да что там строительство – вы, можно сказать, покупаете свой дом! Ведь с момента заключения договора до новоселья пройдет всего <strong>75 дней!</strong></p>
+			</div>
 
 			<div>
 				<h3>Стандартная ипотека от 8,8% на строительство дома в городе или сельской местности</h3>
