--- a/app/about.html
+++ b/app/about.html
@@ -104,12 +104,11 @@
 								</li>
 								<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a>
 								</li>
-								<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные
-											поселки</span></a>
+								<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные поселки</span></a>
 									<ul>
-										<li><a href="https://семейный-дв.рф" target="blank" rel="nofollow">Семейный</a></li>
-										<li><a href="https://экопаркюг.рф" target="blank" rel="nofollow">Экопарк Юг</a></li>
-										<li><a href="https://экопарксевер.рф" target="blank" rel="nofollow">Экопарк Север</a></li>
+										<li><a href="https://семейный-дв.рф" target="_blank" rel="nofollow">Семейный</a></li>
+										<li><a href="https://экопаркюг.рф" target="_blank" rel="nofollow">Экопарк Юг</a></li>
+										<li><a href="https://экопарксевер.рф" target="_blank" rel="nofollow">Экопарк Север</a></li>
 									</ul>
 								</li>
 								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
@@ -769,33 +768,12 @@
 
 					<a href="#video-2" class="video-item open-form-button">
 						<div class="video-block"
-							style="background: url('img/video/2.png') center no-repeat; background-size: cover;"></div>
-						<!-- <p>Дом клиента на Красной речке</p>
-						<span>Монтаж дома в районе Красной речки</span> -->
-					</a>
-
-					<a href="#video-3" class="video-item open-form-button">
-						<div class="video-block"
-							style="background: url('img/video/3.png') center no-repeat; background-size: cover;"></div>
-						<!-- <p>Дом клиента в с.Виноградовка</p>
-						<span>Обзор дома для килента в с.Виноградовка</span> -->
-					</a>
-
-					<a href="#video-4" class="video-item open-form-button">
-						<div class="video-block"
-							style="background: url('img/video/4.png') center no-repeat; background-size: cover;"></div>
-						<!-- <p>Дом клиента по ул.Ханкайская</p>
-						<span>Монтаж дома для клиента по ул.Ханкайская</span> -->
-					</a>
-
-					<a href="#video-5" class="video-item open-form-button">
-						<div class="video-block"
 							style="background: url('img/video/5.png') center no-repeat; background-size: cover;"></div>
 						<!-- <p>Дом клиента по ул.Ханкайская</p>
 						<span>Монтаж дома для клиента по ул.Ханкайская</span> -->
 					</a>
 
-					<a href="#video-6" class="video-item open-form-button">
+					<a href="#video-3" class="video-item open-form-button">
 						<div class="video-block"
 							style="background: url('img/video/6.png') center no-repeat; background-size: cover;"></div>
 						<!-- <p>Дом клиента по ул.Ханкайская</p>
@@ -1059,36 +1037,18 @@
 		</form>
 
 		<div id="video-1" class="open-video zoom-anim-dialog">
-			<iframe width="720" height="480" src="https://www.youtube.com/embed/jKtHIyM1pFk" frameborder="0"
+			<iframe width="720" height="480" src="https://www.youtube.com/embed/Lnl2iZf9Lf8" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
 		</div>
 
 		<div id="video-2" class="open-video zoom-anim-dialog">
-			<iframe width="720" height="480" src="https://www.youtube.com/embed/2ijUsPhk5OA" frameborder="0"
-				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen></iframe>
-		</div>
-
-		<div id="video-3" class="open-video zoom-anim-dialog">
-			<iframe width="720" height="480" src="https://www.youtube.com/embed/lOWm3Tx7qkA" frameborder="0"
-				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen></iframe>
-		</div>
-
-		<div id="video-4" class="open-video zoom-anim-dialog">
-			<iframe width="720" height="480" src="https://www.youtube.com/embed/0-9sQj_8ywc" frameborder="0"
-				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen></iframe>
-		</div>
-
-		<div id="video-5" class="open-video zoom-anim-dialog">
 			<iframe width="720" height="480" src="https://www.youtube.com/embed/q_FNmLNlZmo" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
 		</div>
 
-		<div id="video-6" class="open-video zoom-anim-dialog">
+		<div id="video-3" class="open-video zoom-anim-dialog">
 			<iframe width="720" height="480" src="https://www.youtube.com/embed/dJ3R-Xdi_XY" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
