--- a/app/kontakty.html
+++ b/app/kontakty.html
@@ -115,9 +115,9 @@
 							</li>
 							<li class="menu-item"><a href="#" onclick="return false"><span class="menu-item-text">Коттеджные поселки</span></a>
 								<ul>
-									<li><a href="https://семейный-дв.рф" target="blank" rel="nofollow">Семейный</a></li>
-									<li><a href="https://экопаркюг.рф" target="blank" rel="nofollow">Экопарк Юг</a></li>
-									<li><a href="https://экопарксевер.рф" target="blank" rel="nofollow">Экопарк Север</a></li>
+									<li><a href="https://семейный-дв.рф" target="_blank" rel="nofollow">Семейный</a></li>
+									<li><a href="https://экопаркюг.рф" target="_blank" rel="nofollow">Экопарк Юг</a></li>
+									<li><a href="https://экопарксевер.рф" target="_blank" rel="nofollow">Экопарк Север</a></li>
 								</ul>
 							</li>
 							<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
